# ReportCrawling

./: .gitignore  .replit  Makefile  README.md  a_script.sh  evaluation_values_validation.tex  main.py  namespace.tex  namespace.txt  pyproject.toml  requirements.txt  script_manage_project.sh  test.xlsx
resources/: report.txt
results/: arch_params.tex  evaluation_values_validation.tex  namespace.tex  namespace_keys.txt  namespace_values.txt
results/spredsheets/: test.xlsx
scripts/: script_manage_project.sh
utils/: Makefile  custom_logger.py  handle_evaluation_values.py  handle_namespace.py  report_crawler.py  setup_program.py
utils/report_targets/: create_latex_table.py  handle_architecture_params.py  handle_evaluation_values.py  handle_namespace.py
utils/routine_tasks/: custom_decorators.py  handle_files_content.py  parse_args_custom.py  setup_program.py
utils/tables_spredsheets/: metrics_table.py
