[tool.poetry]
name = "reportcrawling-4"
version = "0.1.0"
description = ""
authors = ["franec94 <franec94@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8"
XlsxWriter = "^1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
